<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/cyan2"
    android:weightSum=".8"
    tools:context="com.mayrajaramillo.appcurso.DatosVeterinario">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".15">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/datos_veterinario"
        android:textSize="@dimen/xxlarge"
        android:textStyle="bold"
        android:gravity="center|bottom"
        android:textColor="@color/morado7"
        android:layout_gravity="center"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight=".65">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombreVet"
            android:textStyle="bold"
            android:textSize="@dimen/xlarge"
           android:gravity="center"
            android:textColor="@color/rojo8"
            />
        <TextView
            android:id="@+id/nombreVeterinario"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/large"
            android:gravity="center"
            android:textColor="@color/negro"

            />
    <TextView
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/direccionVet"
        android:textStyle="bold"
        android:textSize="@dimen/xlarge"
        android:gravity="center"
        android:textColor="@color/rojo8"
        />
        <TextView
            android:id="@+id/direccionVeterinario"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/large"
            android:gravity="center"
            android:textColor="@color/negro"
            />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telefonoVet"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:textSize="@dimen/xlarge"
        android:gravity="center"
        android:textColor="@color/rojo8"/>
        <TextView
            android:id="@+id/telVeterinario"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/large"
            android:gravity="center"
            android:textColor="@color/negro"
            />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:textSize="@dimen/xlarge"
        android:gravity="center"
        android:textColor="@color/rojo8"
        />
        <TextView
            android:id="@+id/emailVeterinario"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/large"
            android:gravity="center"
            android:textColor="@color/negro"
            />
    </LinearLayout>
</LinearLayout>
