<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cyan1"
    android:orientation="vertical"
    android:weightSum="1"

    tools:context="com.mayrajaramillo.loginapp.Form">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight=".85"
            >

            <EditText
                android:id="@+id/etNom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/rojo5"
                android:textColorHint="@color/rojo5"
                android:textStyle="bold"
                android:textSize="@dimen/large"
                android:hint="@string/usuario"
                android:inputType="text" />


            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/email"
                android:textColor="@color/rojo5"
                android:textColorHint="@color/rojo5"
                android:textStyle="bold"
                android:textSize="@dimen/large"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/etPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/password"
                android:textColor="@color/rojo5"
                android:textColorHint="@color/rojo5"
                android:textStyle="bold"
                android:textSize="@dimen/large"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/confPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="Confirmar Password"
                android:textColor="@color/rojo5"
                android:textColorHint="@color/rojo5"
                android:textStyle="bold"
                android:textSize="@dimen/large"
                android:inputType="textPassword" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".15"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnForm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/morado5"
            android:text="Registrar"
            android:textColor="@color/blanco"
            android:textSize="@dimen/medium"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
